# trade_bot

./: .gitignore  pyproject.toml
src/: binance.py  signals.py  test_tradingview_ta.py
src/trading_view_wrapper/: exceptions.py  main_analisys.py
src/trading_view_wrapper/common/: interval.py
src/w3_wrapped/: exceptions.py  secrets.py  w3.py
test_rpc/: Dockerfile  readme.txt
